--- a/environments/dev/contact-us-chart/values.yaml
+++ b/environments/dev/contact-us-chart/values.yaml
@@ -1,57 +1,8 @@
 replicaCount: 2
-
 image:
-  repository: 816069171504.dkr.ecr.eu-central-1.amazonaws.com/contact-us
+  repository: <your-docker-image>
   tag: latest
   pullPolicy: IfNotPresent
-
 service:
   type: ClusterIP
   port: 4000
-
-ingress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-  hosts:
-    - host: contact-us.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-
-resources:
-  limits:
-    cpu: 500m
-    memory: 512Mi
-  requests:
-    cpu: 250m
-    memory: 256Mi
-
-autoscaling:
-  enabled: false
-
-nodeSelector: {}
-tolerations: []
-
-affinity: {}
-
-serviceAccount:
-  create: true
-  name: "contact-us-sa"
-
-env:
-  - name: DB_HOST
-    valueFrom:
-      secretKeyRef:
-        name: contact-us-db-secret
-        key: DB_HOST
-  - name: DB_USER
-    valueFrom:
-      secretKeyRef:
-        name: contact-us-db-secret
-        key: DB_USER
-  - name: DB_PASSWORD
-    valueFrom:
-      secretKeyRef:
-        name: contact-us-db-secret
-        key: DB_PASSWORD
