--- a/environments/dev/contact-us-chart/templates/serviceaccount.yaml
+++ b/environments/dev/contact-us-chart/templates/serviceaccount.yaml
@@ -1,13 +1,5 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "contact-us-chart.serviceAccountName" . }}
-  labels:
-    {{- include "contact-us-chart.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
-{{- end }}
+  name: {{ .Values.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
