--- a/environments/dev/contact-us-chart/values.yaml
+++ b/environments/dev/contact-us-chart/values.yaml
@@ -1,8 +1,3 @@
-replicaCount: 2
-image:
-  repository: <your-docker-image>
-  tag: latest
-  pullPolicy: IfNotPresent
-service:
-  type: ClusterIP
-  port: 4000
+serviceAccount:
+  create: true
+  name: contact-us-sa
