Fix: Full update for Helm values and templates

--- a/environments/dev/contact-us-chart/templates/deployment.yaml
+++ b/environments/dev/contact-us-chart/templates/deployment.yaml
@@ -1,24 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: contact-us-app-contact-us-chart
-  labels:
-    app: contact-us-chart
+  name: contact-us-app
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: contact-us-chart
+      app: contact-us
   template:
     metadata:
       labels:
-        app: contact-us-chart
+        app: contact-us
     spec:
+      serviceAccountName: {{ .Values.serviceAccount.name }}
       containers:
-        - name: contact-us-app
-          image: <your-docker-image>
+        - name: contact-us
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: 4000
+            - containerPort: {{ .Values.service.port }}
           env:
-            - name: NODE_ENV
-              value: "production"
+            - name: DB_HOST
+              value: "{{ .Values.database.host }}"
+            - name: DB_PORT
+              value: "{{ .Values.database.port }}"
+            - name: DB_NAME
+              value: "{{ .Values.database.name }}"
+            - name: DB_USER
+              value: "{{ .Values.database.username }}"
+            - name: DB_PASSWORD
+              value: "{{ .Values.database.password }}"
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
