--- a/environments/dev/contact-us-chart/templates/service.yaml
+++ b/environments/dev/contact-us-chart/templates/service.yaml
@@ -1,13 +1,12 @@
-ללapiVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
-  name: contact-us-app-contact-us-chart
-  namespace: default
+  name: contact-us-service
 spec:
   selector:
-    app.kubernetes.io/name: contact-us-chart
+    app: contact-us
   ports:
     - protocol: TCP
-      port: 4000
-      targetPort: 4000
-  type: ClusterIP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+  type: {{ .Values.service.type }}
