--- a/environments/dev/contact-us-chart/templates/serviceaccount.yaml
+++ b/environments/dev/contact-us-chart/templates/serviceaccount.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: default
