--- a/environments/dev/contact-us-chart/values.yaml
+++ b/environments/dev/contact-us-chart/values.yaml
@@ -1,6 +1,51 @@
-serviceAccount:
-  create: true
-  name: contact-us-sa
+replicaCount: 1
+
+image:
+  repository: 816069171504.dkr.ecr.eu-central-1.amazonaws.com/contact-us
+  tag: latest
+  pullPolicy: IfNotPresent
+
 service:
   type: ClusterIP
   port: 4000
+
+ingress:
+  enabled: true
+  annotations: {}
+  hosts:
+    - host: contact-us.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 250m
+    memory: 256Mi
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
+serviceAccount:
+  create: true
+  name: "contact-us-sa"
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+
+database:
+  host: terraform-20250319211239417600000001.cx0eu8gasbon.eu-central-1.rds.amazonaws.com
+  port: 3306
+  name: contactusdb
+  username: admin
+  password: "your-secure-password"
